--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,9 +10,9 @@
 
 .container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     width: 100%;
-    height: 60vh;
+    height: auto;
 }
 
 .conteudo{
@@ -21,9 +21,11 @@
 }
 .l-e{
     flex-grow: 1;
-    background-image: url('../img/banner-lateral-1.png');
+    background-color:coral;
 }
 .l-d{
     flex-grow: 1;
-    background-image: url('../img/banner-lateral-2.png');
+    background-color: crimson;
 }
+
+
